force-app/main/default/objects/Rework__c/Rework__c.object-meta.xml
<CustomObject>
    <label>Rework</label>
    <nameField>
        <label>Bus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>