force-app/main/default/objects/Rework__c/fields/Buildstation__c.field-meta.xml
<CustomField>
    <fullName>Buildstation__c</fullName>
    <label>Buildstation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>