force-app/main/default/objects/Rework__c/fields/Bus_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Part_Number__c</fullName>
    <label>Bus Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>