force-app/main/default/objects/Rework__c/fields/Department_Id__c.field-meta.xml
<CustomField>
    <fullName>Department_Id__c</fullName>
    <label>Department Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>