force-app/main/default/objects/Rework__c/fields/LastModifiedByEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByEmployeeId__c</fullName>
    <label>LastModifiedByEmployeeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>