force-app/main/default/objects/Rework__c/fields/Quantity_Reworked__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Reworked__c</fullName>
    <label>Quantity Reworked</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>