force-app/main/default/objects/Rework__c/fields/Reason_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Id__c</fullName>
    <label>Reason Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>