force-app/main/default/objects/Rework__c/fields/Rework_description__c.field-meta.xml
<CustomField>
    <fullName>Rework_description__c</fullName>
    <label>Rework description</label>
    <type>TextArea</type>
</CustomField>