force-app/main/default/objects/Rework__c/fields/Reworked_by__c.field-meta.xml
<CustomField>
    <fullName>Reworked_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reworked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reworks</relationshipName>
    <type>Lookup</type>
</CustomField>