force-app/main/default/objects/Rework__c/fields/Reworked_by_employee_id__c.field-meta.xml
<CustomField>
    <fullName>Reworked_by_employee_id__c</fullName>
    <label>Reworked by employee id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>