force-app/main/default/objects/Rework__c/fields/Reworked_to_part_number__c.field-meta.xml
<CustomField>
    <fullName>Reworked_to_part_number__c</fullName>
    <label>Reworked to part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>