force-app/main/default/objects/Rework__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity_Reworked__c</columns>
    <columns>UUID__c</columns>
    <columns>LastModifiedByEmployeeId__c</columns>
    <columns>Bus_Part_Number__c</columns>
    <columns>Reworked_to_part_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>